src/freeRTOS/wrapper.rs

unsafe extern "C" {
    #[doc = " task.h\n @code{c}\n void vTaskSetTimeOutState( TimeOut_t * const pxTimeOut );\n @endcode\n\n Capture the current time for future use with xTaskCheckForTimeOut().\n\n @param pxTimeOut Pointer to a timeout object into which the current time\n is to be captured.  The captured time includes the tick count and the number\n of times the tick count has overflowed since the system first booted.\n \\defgroup vTaskSetTimeOutState vTaskSetTimeOutState\n \\ingroup TaskCtrl"]
    pub fn vTaskSetTimeOutState(pxTimeOut: *mut TimeOut_t);
}
unsafe extern "C" {
    #[doc = " task.h\n @code{c}\n BaseType_t xTaskCheckForTimeOut( TimeOut_t * const pxTimeOut, TickType_t * const pxTicksToWait );\n @endcode\n\n Determines if pxTicksToWait ticks has passed since a time was captured\n using a call to vTaskSetTimeOutState().  The captured time includes the tick\n count and the number of times the tick count has overflowed.\n\n @param pxTimeOut The time status as captured previously using\n vTaskSetTimeOutState. If the timeout has not yet occurred, it is updated\n to reflect the current time status.\n @param pxTicksToWait The number of ticks to check for timeout i.e. if\n pxTicksToWait ticks have passed since pxTimeOut was last updated (either by\n vTaskSetTimeOutState() or xTaskCheckForTimeOut()), the timeout has occurred.\n If the timeout has not occurred, pxTicksToWait is updated to reflect the\n number of remaining ticks.\n\n @return If timeout has occurred, pdTRUE is returned. Otherwise pdFALSE is\n returned and pxTicksToWait is updated to reflect the number of remaining\n ticks.\n\n @see https://www.FreeRTOS.org/xTaskCheckForTimeOut.html\n\n Example Usage:\n @code{c}\n  // Driver library function used to receive uxWantedBytes from an Rx buffer\n  // that is filled by a UART interrupt. If there are not enough bytes in the\n  // Rx buffer then the task enters the Blocked state until it is notified that\n  // more data has been placed into the buffer. If there is still not enough\n  // data then the task re-enters the Blocked state, and xTaskCheckForTimeOut()\n  // is used to re-calculate the Block time to ensure the total amount of time\n  // spent in the Blocked state does not exceed MAX_TIME_TO_WAIT. This\n  // continues until either the buffer contains at least uxWantedBytes bytes,\n  // or the total amount of time spent in the Blocked state reaches\n  // MAX_TIME_TO_WAIT - at which point the task reads however many bytes are\n  // available up to a maximum of uxWantedBytes.\n\n  size_t xUART_Receive( uint8_t *pucBuffer, size_t uxWantedBytes )\n  {\n  size_t uxReceived = 0;\n  TickType_t xTicksToWait = MAX_TIME_TO_WAIT;\n  TimeOut_t xTimeOut;\n\n      // Initialize xTimeOut.  This records the time at which this function\n      // was entered.\n      vTaskSetTimeOutState( &xTimeOut );\n\n      // Loop until the buffer contains the wanted number of bytes, or a\n      // timeout occurs.\n      while( UART_bytes_in_rx_buffer( pxUARTInstance ) < uxWantedBytes )\n      {\n          // The buffer didn't contain enough data so this task is going to\n          // enter the Blocked state. Adjusting xTicksToWait to account for\n          // any time that has been spent in the Blocked state within this\n          // function so far to ensure the total amount of time spent in the\n          // Blocked state does not exceed MAX_TIME_TO_WAIT.\n          if( xTaskCheckForTimeOut( &xTimeOut, &xTicksToWait ) != pdFALSE )\n          {\n              //Timed out before the wanted number of bytes were available,\n              // exit the loop.\n              break;\n          }\n\n          // Wait for a maximum of xTicksToWait ticks to be notified that the\n          // receive interrupt has placed more data into the buffer.\n          ulTaskNotifyTake( pdTRUE, xTicksToWait );\n      }\n\n      // Attempt to read uxWantedBytes from the receive buffer into pucBuffer.\n      // The actual number of bytes read (which might be less than\n      // uxWantedBytes) is returned.\n      uxReceived = UART_read_from_receive_buffer( pxUARTInstance,\n                                                  pucBuffer,\n                                                  uxWantedBytes );\n\n      return uxReceived;\n  }\n @endcode\n \\defgroup xTaskCheckForTimeOut xTaskCheckForTimeOut\n \\ingroup TaskCtrl"]
    pub fn xTaskCheckForTimeOut(
        pxTimeOut: *mut TimeOut_t,
        pxTicksToWait: *mut TickType_t,
    ) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " task.h\n @code{c}\n BaseType_t xTaskCatchUpTicks( TickType_t xTicksToCatchUp );\n @endcode\n\n This function corrects the tick count value after the application code has held\n interrupts disabled for an extended period resulting in tick interrupts having\n been missed.\n\n This function is similar to vTaskStepTick(), however, unlike\n vTaskStepTick(), xTaskCatchUpTicks() may move the tick count forward past a\n time at which a task should be removed from the blocked state.  That means\n tasks may have to be removed from the blocked state as the tick count is\n moved.\n\n @param xTicksToCatchUp The number of tick interrupts that have been missed due to\n interrupts being disabled.  Its value is not computed automatically, so must be\n computed by the application writer.\n\n @return pdTRUE if moving the tick count forward resulted in a task leaving the\n blocked state and a context switch being performed.  Otherwise pdFALSE.\n\n \\defgroup xTaskCatchUpTicks xTaskCatchUpTicks\n \\ingroup TaskCtrl"]
    pub fn xTaskCatchUpTicks(xTicksToCatchUp: TickType_t) -> BaseType_t;
}
unsafe extern "C" {
    #[doc = " task.h\n @code{c}\n void vTaskResetState( void );\n @endcode\n\n This function resets the internal state of the task. It must be called by the\n application before restarting the scheduler.\n\n \\defgroup vTaskResetState vTaskResetState\n \\ingroup SchedulerControl"]
    pub fn vTaskResetState();
}
unsafe extern "C" {
    pub fn xTaskIncrementTick() -> BaseType_t;
}
unsafe extern "C" {
    pub fn vTaskPlaceOnEventList(pxEventList: *mut List_t, xTicksToWait: TickType_t);
}
unsafe extern "C" {
    pub fn vTaskPlaceOnUnorderedEventList(
        pxEventList: *mut List_t,
        xItemValue: TickType_t,
        xTicksToWait: TickType_t,
    );
}
unsafe extern "C" {
    pub fn vTaskPlaceOnEventListRestricted(
        pxEventList: *mut List_t,
        xTicksToWait: TickType_t,
        xWaitIndefinitely: BaseType_t,
    );
}
unsafe extern "C" {
    pub fn xTaskRemoveFromEventList(pxEventList: *const List_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn vTaskRemoveFromUnorderedEventList(
        pxEventListItem: *mut ListItem_t,
        xItemValue: TickType_t,
    );
}
unsafe extern "C" {
    pub fn vTaskSwitchContext();
}
unsafe extern "C" {
    pub fn uxTaskResetEventItemValue() -> TickType_t;
}
unsafe extern "C" {
    pub fn xTaskGetCurrentTaskHandle() -> TaskHandle_t;
}
unsafe extern "C" {
    pub fn xTaskGetCurrentTaskHandleForCore(xCoreID: BaseType_t) -> TaskHandle_t;
}
unsafe extern "C" {
    pub fn vTaskMissedYield();
}
unsafe extern "C" {
    pub fn xTaskGetSchedulerState() -> BaseType_t;
}
unsafe extern "C" {
    pub fn xTaskPriorityInherit(pxMutexHolder: TaskHandle_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn xTaskPriorityDisinherit(pxMutexHolder: TaskHandle_t) -> BaseType_t;
}
unsafe extern "C" {
    pub fn vTaskPriorityDisinheritAfterTimeout(
        pxMutexHolder: TaskHandle_t,
        uxHighestPriorityWaitingTask: UBaseType_t,
    );
}
unsafe extern "C" {
    pub fn pvTaskIncrementMutexHeldCount() -> TaskHandle_t;
}
unsafe extern "C" {
    pub fn vTaskInternalSetTimeOutState(pxTimeOut: *mut TimeOut_t);
}
#[doc = " Type by which queues are referenced.  For example, a call to xQueueCreate()\n returns an QueueHandle_t variable that can then be used as a parameter to\n xQueueSend(), xQueueReceive(), etc."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct QueueDefinition {
    _unused: [u8; 0],
}
pub type QueueHandle_t = *mut QueueDefinition;
#[doc = " Type by which queue sets are referenced.  For example, a call to\n xQueueCreateSet() returns an xQueueSet variable that can then be used as a\n parameter to xQueueSelectFromSet(), xQueueAddToSet(), etc."]
pub type QueueSetHandle_t = *mut QueueDefinition;
#[doc = " Queue sets can contain both queues and semaphores, so the\n QueueSetMemberHandle_t is defined as a type to be used where a parameter or\n return value can be either an QueueHandle_t or an SemaphoreHandle_t."]
pub type QueueSetMemberHandle_t = *mut QueueDefinition;
unsafe extern "C" {
    #[doc = " queue. h\n @code{c}\n BaseType_t xQueueGenericSend(\n                                  QueueHandle_t xQueue,\n                                  const void * pvItemToQueue,\n                                  TickType_t xTicksToWait\n                                  BaseType_t xCopyPosition\n                              );\n @endcode\n\n It is preferred that the macros xQueueSend(), xQueueSendToFront() and\n xQueueSendToBack() are used in place of calling this function directly.\n\n Post an item on a queue.  The item is queued by copy, not by reference.\n This function must not be called from an interrupt service routine.\n See xQueueSendFromISR () for an alternative which may be used in an ISR.\n\n @param xQueue The handle to the queue on which the item is to be posted.\n\n @param pvItemToQueue A pointer to the item that is to be placed on the\n queue.  The size of the items the queue will hold was defined when the\n queue was created, so this many bytes will be copied from pvItemToQueue\n into the queue storage area.\n\n @param xTicksToWait The maximum amount of time the task should block\n waiting for space to become available on the queue, should it already\n be full.  The call will return immediately if this is set to 0 and the\n queue is full.  The time is defined in tick periods so the constant\n portTICK_PERIOD_MS should be used to convert to real time if this is required.\n\n @param xCopyPosition Can take the value queueSEND_TO_BACK to place the\n item at the back of the queue, or queueSEND_TO_FRONT to place the item\n at the front of the queue (for high priority messages).\n\n @return pdPASS if the item was successfully posted, otherwise errQUEUE_FULL.\n\n Example usage:\n @code{c}\n struct AMessage\n {\n  char ucMessageID;\n  char ucData[ 20 ];\n } xMessage;\n\n uint32_t ulVar = 10U;\n\n void vATask( void *pvParameters )\n {\n QueueHandle_t xQueue1, xQueue2;\n struct AMessage *pxMessage;\n\n  // Create a queue capable of containing 10 uint32_t values.\n  xQueue1 = xQueueCreate( 10, sizeof( uint32_t ) );\n\n  // Create a queue capable of containing 10 pointers to AMessage structures.\n  // These should be passed by pointer as they contain a lot of data.\n  xQueue2 = xQueueCreate( 10, sizeof( struct AMessage * ) );\n\n  // ...\n\n  if( xQueue1 != 0 )\n  {\n      // Send an uint32_t.  Wait for 10 ticks for space to become\n      // available if necessary.\n      if( xQueueGenericSend( xQueue1, ( void * ) &ulVar, ( TickType_t ) 10, queueSEND_TO_BACK ) != pdPASS )\n      {\n          // Failed to post the message, even after 10 ticks.\n      }\n  }\n\n  if( xQueue2 != 0 )\n  {\n      // Send a pointer to a struct AMessage object.  Don't block if the\n      // queue is already full.\n      pxMessage = & xMessage;\n      xQueueGenericSend( xQueue2, ( void * ) &pxMessage, ( TickType_t ) 0, queueSEND_TO_BACK );\n  }\n\n  // ... Rest of task code.\n }\n @endcode\n \\defgroup xQueueSend xQueueSend\n \\ingroup QueueManagement"]
    pub fn xQueueGenericSend(
        xQueue: QueueHandle_t,
        pvItemToQueue: *const ::std::os::raw::c_void,
        xTicksToWait: TickType_t,
        xCopyPosition: BaseType_t,
    ) -> BaseType_t;
}
